--- a/uberpong.html
+++ b/uberpong.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 <h1>Uber Pong</h1>
+<div>
+<div class="duration">
+<div class="label">Duration</div>
+<span id="duration">00:00</span>
+</div>
+</div>
 <div class="canvas">
 <canvas id="canvas" width="640" height="480"></canvas>
 </div>
