Fixed timer problems and started adding multiple ball generation

--- a/uberpong.html
+++ b/uberpong.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="jquery-1.5.min.js"></script>
 <script type="text/javascript" src="canvas-game.js"></script>
 <script type="text/javascript" src="uberpong.js"></script>
+<script type="text/javascript" src="sprintf-0.7-beta1.js"></script>
 </head>
 <body>
 <h1>Uber Pong</h1>
