added a display for the number of active balls

--- a/uberpong.html
+++ b/uberpong.html
@@ -15,6 +15,11 @@
 <span id="duration">00:00</span>
 </div>
 </div>
+<div class="numBalls">
+<div class="label">Number of Balls Active</div>
+<span id="numBalls">0</span>
+</div>
+</div>
 <div class="canvas">
 <canvas id="canvas" width="640" height="480"></canvas>
 </div>
