added music and mute button

--- a/uberpong.html
+++ b/uberpong.html
@@ -23,5 +23,6 @@
 <div class="canvas">
 <canvas id="canvas" width="640" height="480"></canvas>
 </div>
+<input type="button" id="mute" onclick="toggle_mute()" value="Toggle Mute">
 </body>
 </html>
